# ai_agent_learning

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/config/: config.py  constants.py  llm_setup.py
core/helpers/: chat_engine_registry.py  logger.py
core/src/: app.py  chat_engine.py  chat_engine_registry.py  custom_chat_engine.py  rag_events.py  rag_ingestion.py  rag_system.py  rag_workflow.py  rag_workflow_final.py
core/src/rag/: custom_chat_engine.py  rag_ingestion.py  rag_workflow.py
core/src/ui/: app.py
etl/: md_chunker.py
helpers/: json_extractor.py  qdrant_setup.py
notebooks/: prototyping.ipynb
src/: config.py
