[project]
name = "ai_agent"
version = "0.0.1"
description = "AI agent learning project for learning RAG system based on llama-index package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.55.0",
    "gradio>=6.2.0",
    "huggingface-hub[hf-xet]>=0.36.0",
    "langchain-text-splitters>=1.1.0",
    "llama-index>=0.14.10",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-google-genai>=0.8.0",
    "llama-index-storage-chat-store-redis>=0.5.1",
    "llama-index-vector-stores-qdrant>=0.9.0",
    "loguru>=0.7.3",
    "qdrant-client>=1.16.1",
    "redis>=7.1.0",
]

[project.optional-dependencies]
